// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots React|Contexts Languages 1`] = `
<div>
  <div
    style="color: white; background: rgb(23, 63, 95); height: 100vh; padding: 10px;"
  >
    Your locale is "unknown", so I say "NULL"!
  </div>
</div>
`;

exports[`Storyshots React|Contexts Simple CSS Theming 1`] = `
<div>
  <div
    style="color: white; background: rgb(23, 63, 95); height: 100vh; padding: 10px;"
  >
    I'm a children of the injected 'div' (where provides a theming context).
  </div>
</div>
`;
